--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,12 @@
             <version>3.141.59</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>6.8</version>
+        </dependency>
+
     </dependencies>
 
 </project>
